Implement charts command

--- a/src/main/resources/digestbot/Charts.yml
+++ b/src/main/resources/digestbot/Charts.yml
@@ -7,163 +7,163 @@
 # private final int K_BUTTN_EN = 5;
 # private final int K_API_LINK = 6;
 
-mmbv:
+chart.mmbv:
   - "Индекс ММВБ."
   - "MICEX Index."
-  - "mmvb      — График ММВБ-индекса."
-  - "mmvb      — MICEX index chart."
-  - "ММВБ индекс"
-  - "MICEX Index"
+  - "ММВБ        — График ММВБ-индекса."
+  - "MICEX     — MICEX index chart."
+  - "ММВБ"
+  - "MICEX"
   - "http://api.z-lab.me/charts/mmvb.png"
-usd_rub:
+chart.usd_rub:
   - "Курс USD/RUB по Forex."
   - "USD/RUB rate from Forex."
-  - "usd_rub   — Текущий курс USD/RUB по Forex."
-  - "usd_rub   — Current USD/RUB rate from Forex."
+  - "USD/RUB     — Текущий курс USD/RUB по Forex."
+  - "USD/RUB   — Current USD/RUB rate from Forex."
   - "USD/RUB"
   - "USD/RUB"
   - "http://api.z-lab.me/charts/usd_rub_forex.png"
-usd_uah:
+chart.usd_uah:
   - "Курс USD/UAH по Nasdaq, NYSE."
   - "USD/UAH rate from Nasdaq, NYSE."
-  - "usd_uah   — Текущий курс USD/UAH по NYSE."
-  - "usd_uah   — Current USD/UAH rate from NYSE."
+  - "USD/UAH     — Текущий курс USD/UAH по NYSE."
+  - "USD/UAH   — Current USD/UAH rate from NYSE."
   - "USD/UAH"
   - "USD/UAH"
   - "http://api.z-lab.me/charts/usd_uah.png"
-eur_rub:
+chart.eur_rub:
   - "Курс EUR/RUB по Forex."
   - "EUR/RUB rate from Forex."
-  - "eur_rub   — Текущий курс EUR/RUB по Forex."
-  - "eur_rub   — Current EUR/RUB rate from Forex."
+  - "EUR/RUB     — Текущий курс EUR/RUB по Forex."
+  - "EUR/RUB   — Current EUR/RUB rate from Forex."
   - "EUR/RUB"
   - "EUR/RUB"
   - "http://api.z-lab.me/charts/rub_eur_forex.png"
-eur_usd:
+chart.eur_usd:
   - "Курс EUR/UAH по Forex."
   - "EUR/UAH rate from Forex."
-  - "eur_usd   — Текущий курс EUR/USD по Forex."
-  - "eur_usd   — Current EUR/USD rate from Forex."
+  - "EUR/UAH     — Текущий курс EUR/USD по Forex."
+  - "EUR/UAH   — Current EUR/USD rate from Forex."
   - "EUR/UAH"
   - "EUR/UAH"
   - "http://api.z-lab.me/charts/eur_usd_forex.png"
-gold:
+chart.gold:
   - "Золото по Nasdaq."
   - "Gold from Nasdaq."
-  - "gold      — Золото по Nasdaq."
-  - "gold      — Gold from Nasdaq."
+  - "Золото      — Золото по Nasdaq."
+  - "Gold      — Gold from Nasdaq."
   - "Золото"
   - "Gold"
   - "http://api.z-lab.me/charts/gold.png"
-palladium:
+chart.palladium:
   - "Палладий по Nasdaq."
   - "Palladium from Nasdaq."
-  - "palladium — Палладий по Nasdaq."
-  - "palladium — Palladium from Nasdaq."
+  - "Палладий    — Палладий по Nasdaq."
+  - "Palladium — Palladium from Nasdaq."
   - "Палладий"
   - "Palladium"
   - "http://api.z-lab.me/charts/palladium.png"
-platinum:
+chart.platinum:
   - "Платина по Nasdaq."
   - "Platinum from Nasdaq."
-  - "platinum  — Платина по Nasdaq."
-  - "platinum  — Platinum from Nasdaq."
+  - "Платина     — Платина по Nasdaq."
+  - "Platinum  — Platinum from Nasdaq."
   - "Платина"
   - "Platinum"
   - "http://api.z-lab.me/charts/platinum.png"
-rhodium:
+chart.rhodium:
   - "Родий по Nasdaq."
   - "Rhodium from Nasdaq."
-  - "rhodium   — Родий по Nasdaq."
-  - "rhodium   — Rhodium from Nasdaq."
+  - "Родий       — Родий по Nasdaq."
+  - "Rhodium   — Rhodium from Nasdaq."
   - "Родий"
   - "Rhodium"
   - "http://api.z-lab.me/charts/rhodium.png"
-silver:
+chart.silver:
   - "Серебро по Nasdaq."
   - "Silver from Nasdaq."
-  - "silver    — Серебро по Nasdaq."
-  - "silver    — Silver from Nasdaq."
+  - "Серебро     — Серебро по Nasdaq."
+  - "Silver    — Silver from Nasdaq."
   - "Серебро"
   - "Silver"
   - "http://api.z-lab.me/charts/silver.png"
-rts:
+chart.rts:
   - "Индекс РТС по ММВБ."
   - "RTS Index from ММВБ (MICEX)."
-  - "rts       — График индекса РТС по ММВБ."
-  - "rts       — RTS Index chart from ММВБ (MICEX)."
-  - "РТС индекс"
-  - "RTS Index"
+  - "РТС         — График индекса РТС по ММВБ."
+  - "RTS       — RTS Index chart from ММВБ (MICEX)."
+  - "РТС"
+  - "RTS"
   - "http://api.z-lab.me/charts/rts.png"
-btc_usd:
+chart.btc_usd:
   - "Курс BTC/USD по WorldCoinIndex."
   - "BTC/USD rate from WorldCoinIndex."
-  - "btc_usd   — Текущий курс BTC/USD по WCI."
-  - "btc_usd   — Current BTC/USD rate from WCI."
+  - "BTC/USD     — Текущий курс BTC/USD по WCI."
+  - "BTC/USD   — Current BTC/USD rate from WCI."
   - "BTC/USD"
   - "BTC/USD"
   - "http://api.z-lab.me/charts/btc_usd.png"
-bcc_usd:
+chart.bcc_usd:
   - "Курс BCC/USD по WorldCoinIndex."
   - "BCC/USD rate from WorldCoinIndex."
-  - "bcc_usd   — Текущий курс BCC/USD по WCI."
-  - "bcc_usd   — Current BCC/USD rate from WCI."
+  - "BCC/USD     — Текущий курс BCC/USD по WCI."
+  - "BCC/USD   — Current BCC/USD rate from WCI."
   - "BCC/USD"
   - "BCC/USD"
   - "http://api.z-lab.me/charts/bcc_usd.png"
-dsh_usd:
+chart.dsh_usd:
   - "Курс DSH/USD по WorldCoinIndex."
   - "DSH/USD rate from WorldCoinIndex."
-  - "dsh_usd   — Текущий курс DSH/USD по WCI."
-  - "dsh_usd   — Current DSH/USD rate from WCI."
+  - "DSH/USD     — Текущий курс DSH/USD по WCI."
+  - "DSH/USD   — Current DSH/USD rate from WCI."
   - "DSH/USD"
   - "DSH/USD"
   - "http://api.z-lab.me/charts/dsh_usd.png"
-ltc_usd:
+chart.ltc_usd:
   - "Курс LTC/USD по WorldCoinIndex."
   - "LTC/USD rate from WorldCoinIndex."
-  - "ltc_usd   — Текущий курс LTC/USD по WCI."
-  - "ltc_usd   — Current LTC/USD rate from WCI."
+  - "LTC/USD     — Текущий курс LTC/USD по WCI."
+  - "LTC/USD   — Current LTC/USD rate from WCI."
   - "LTC/USD"
   - "LTC/USD"
   - "http://api.z-lab.me/charts/ltc_usd.png"
-eth_usd:
+chart.eth_usd:
   - "Курс ETH/USD по WorldCoinIndex."
   - "ETH/USD rate from WorldCoinIndex."
-  - "eth_usd   — Текущий курс ETH/USD по WCI."
-  - "eth_usd   — Current ETH/USD rate from WCI."
+  - "ETH/USD     — Текущий курс ETH/USD по WCI."
+  - "ETH/USD   — Current ETH/USD rate from WCI."
   - "ETH/USD"
   - "ETH/USD"
   - "http://api.z-lab.me/charts/eth_usd.png"
-iota_usd:
+chart.iota_usd:
   - "Курс IOTA/USD по WorldCoinIndex."
   - "IOTA/USD rate from WorldCoinIndex."
-  - "iota_usd  — Текущий курс IOTA/USD по WCI."
-  - "iota_usd  — Current IOTA/USD rate from WCI."
+  - "IOTA/USD    — Текущий курс IOTA/USD по WCI."
+  - "IOTA/USD  — Current IOTA/USD rate from WCI."
   - "IOTA/USD"
   - "IOTA/USD"
   - "http://api.z-lab.me/charts/iota_usd.png"
-usd_rub_n:
+chart.usd_rub_n:
   - "Курс USD/RUB по Nasdaq, NYSE."
   - "USD/RUB rate from Nasdaq, NYSE."
-  - "usd_rub_n — Текущий курс USD/RUB по NYSE."
-  - "usd_rub_n — Current USD/RUB rate from NYSE."
+  - "USD/RUB N   — Текущий курс USD/RUB по NYSE."
+  - "USD/RUB N — Current USD/RUB rate from NYSE."
   - "USD/RUB N"
   - "USD/RUB N"
   - "http://api.z-lab.me/charts/usd_rub.png"
-brent:
+chart.brent:
   - "Нефть Brent по Nasdaq, NYSE."
   - "Brent oil from Nasdaq, NYSE."
-  - "brent     — Нефть Brent USD/BBL по NYSE."
-  - "brent     — Brent oil USD/BBL rate from NYSE."
+  - "Нефть Brent — Нефть Brent USD/BBL по NYSE."
+  - "Brent Oil — Brent oil USD/BBL rate from NYSE."
   - "Нефть Brent"
   - "Brent Oil"
   - "http://api.z-lab.me/charts/brent.png"
-wti:
+chart.wti:
   - "Нефть WTI по Nasdaq, NYSE."
   - "WTI oil from Nasdaq, NYSE."
-  - "wti       — Нефть WTI USD/BBL по NYSE."
-  - "wti       — WTI oil USD/BBL rate from NYSE."
+  - "Нефть WTI   — Нефть WTI USD/BBL по NYSE."
+  - "WTI Oil   — WTI oil USD/BBL rate from NYSE."
   - "Нефть WTI"
   - "WTI Oil"
   - "http://api.z-lab.me/charts/wti.png"
