--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -52,5 +52,9 @@ error.hostip:
   - "Ошибка получения IP-адреса:"
 error.game:
   - "Не могу получить игровую статистику, ошибка: `%s`."
+error.chart:
+  - "Не могу получить изображение графика, ошибка: `%s`."
 warn.response.long:
   - "<текст обрезан>"
+inline.chart.selected:
+  - "Вы выбрали:"
