Implement /charts command: add cooldown for inlines

--- a/src/main/resources/digestbot/Phrases_en.yml
+++ b/src/main/resources/digestbot/Phrases_en.yml
@@ -58,3 +58,5 @@ warn.response.long:
   - "<text is cropped>"
 inline.chart.selected:
   - "You have chosen:"
+inline.error.cooldown:
+  - "❌ Please wait %d sec."
