--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -58,3 +58,5 @@ warn.response.long:
   - "<текст обрезан>"
 inline.chart.selected:
   - "Вы выбрали:"
+inline.error.cooldown:
+  - "❌ Подождите %d сек."
