Implement some inline rate buttons

--- a/src/main/resources/digestbot/Phrases_en.yml
+++ b/src/main/resources/digestbot/Phrases_en.yml
@@ -60,3 +60,5 @@ inline.chart.selected:
   - "You have chosen:"
 inline.error.cooldown:
   - "❌ Please wait %d sec."
+inline.info.updated:
+  - "Data is updated."
