--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -54,6 +54,8 @@ error.game:
   - "Не могу получить игровую статистику, ошибка: `%s`."
 error.chart:
   - "Не могу получить изображение графика, ошибка: `%s`."
+error.rates:
+  - "Ошибка получения данных котировок."
 warn.response.long:
   - "<текст обрезан>"
 inline.chart.selected:
