--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -17,6 +17,7 @@ command.help:
   - "/start — Приветствие."
   - "/coffee — Стикер с кофе."
   - "/game — Статистика игровых серверов."
+  - "/subscribe — Подписаться на сообщения форума MotoFan.Ru."
   - "/help — Эта справка."
 command.help.admin:
   - "/hello или /hi  — Получить привет от бота."
@@ -31,6 +32,18 @@ command.game:
   - "Игровая статистика:"
 command.charts:
   - "📈 Пожалуйста, выберите график 📉"
+command.subscribe:
+  - "Подписка чата `%d` на сообщения MotoFan.Ru"
+  - "Статус: %s"
+  - "Пожалуйста выберите действие:"
+command.subscribe.subscribed:
+  - "✅ Подписка оформлена."
+command.subscribe.unsubscribed:
+  - "❌ Подписка не оформлена."
+command.subscribe.button.subscribe:
+  - "Подписаться"
+command.subscribe.button.unsubscribe:
+  - "Отписаться"
 error.access:
   - "К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель."
 error.chatid:
@@ -62,3 +75,13 @@ inline.chart.selected:
   - "Вы выбрали:"
 inline.error.cooldown:
   - "❌ Подождите %d сек."
+inline.error.subscribe.admin:
+  - "❌ Подписка групп возможна лишь администраторам."
+inline.error.subscribe.exist:
+  - "❌ Чат уже подписан."
+inline.error.unsubscribe.exist:
+  - "❌ Чат уже отписан."
+inline.subscribe.subscribed:
+  - "✅ Подписка оформлена."
+inline.subscribe.unsubscribed:
+  - "✅ Подписка отменена."
