--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -46,6 +46,27 @@ command.subscribe.button.unsubscribe:
   - "Отписаться"
 command.digest.page:
   - "Стр."
+command.digest.hello:
+  - "Привет, ребята! #digest"
+  - "Солнечного дня тебе, %username%! #digest"
+  - "Привет, котятки :3 #digest"
+  - "Привет, %username%, рада тебя снова видеть :3 #digest"
+  - "Привет всем программистам! #digest"
+  - "Всем привет. #digest"
+command.digest.header:
+  - "По твоему запросу я составила следующее, стр."
+  - "Твой персональный дайджест, стр."
+  - "Итак, случилось следующее, стр."
+  - "Нескучный денёк. Вот последние события, стр."
+  - "Произошло следующее, стр."
+  - "Пока тебя не было, столько всего произошло, стр."
+command.digest.empty:
+  - "К сожалению, ничего нет. Прости меня, %username%."
+  - "Опять кто-то забыл заполнить #digest! %username%, поругай их."
+  - "Ну и кто забыл заполнить дайджест? %username%?!"
+  - "А %username% так и не заполнял дайджест. Сделайте ему ата-та-та."
+  - "Всю ночь непристойные картинки в чат постили, а дайджест не заполнили. Эх вы."
+  - "Опять все забыли про дайджест. Ничего тут нет 😓"
 error.access:
   - "К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель."
 error.chatid:
