--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -67,6 +67,10 @@ command.digest.empty:
   - "А %username% так и не заполнял дайджест. Сделайте ему ата-та-та."
   - "Всю ночь непристойные картинки в чат постили, а дайджест не заполнили. Эх вы."
   - "Опять все забыли про дайджест. Ничего тут нет 😓"
+command.digest.marker:
+  - "•"
+command.digest.marker.new:
+  - "🆕"
 error.access:
   - "К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель."
 error.chatid:
