--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -21,7 +21,8 @@ command.help:
   - "/help — Эта справка."
 command.help.admin:
   - "/hello или /hi  — Получить привет от бота."
-  - "/delete <arg> — Удалить запись дайджеста под номером <arg>."
+  - "/delete — Показать список записей дайджеста."
+  - "/delete <id> — Удалить запись дайджеста под номером <id>."
   - "/send <chat id> <message> — Отправить <message> в <chat id>."
   - "/sticker <chat id> <sticker id> — Отправить стикер в <chat id>."
   - "/image <chat id> <image url> — Отправить фото в <chat id>."
@@ -71,6 +72,12 @@ command.digest.marker:
   - "•"
 command.digest.marker.new:
   - "🆕"
+command.delete.show.header:
+  - "Список дайджестов, для удаления отправьте `/delete <id>`:"
+command.delete.ellipsis:
+  - "…"
+command.delete.ok:
+  - "Запись под номером `%d` удалена из базы данных!"
 error.access:
   - "К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель."
 error.chatid:
@@ -96,6 +103,14 @@ error.chart:
   - "Не могу получить изображение графика, ошибка: `%s`."
 error.rates:
   - "Ошибка получения данных котировок."
+error.delete.empty:
+  - "Ошибка: нет подходящих записей в базе данных."
+error.delete.format:
+  - "Неправильный формат комманды, используйте:"
+  - "`/delete <id>`."
+error.delete.error:
+  - "Невозможно удалить запись `%d` из базы данных."
+  - "Возможно запись уже была удалена."
 warn.response.long:
   - "<текст обрезан>"
 inline.chart.selected:
