--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -21,7 +21,7 @@ command.help:
   - "/help — Эта справка."
 command.help.admin:
   - "/hello или /hi  — Получить привет от бота."
-  - "/delete — Показать список записей дайджеста."
+  - "/show <page id> — Показать список записей дайджеста."
   - "/delete <id> — Удалить запись дайджеста под номером <id>."
   - "/send <chat id> <message> — Отправить <message> в <chat id>."
   - "/sticker <chat id> <sticker id> — Отправить стикер в <chat id>."
@@ -72,9 +72,9 @@ command.digest.marker:
   - "•"
 command.digest.marker.new:
   - "🆕"
-command.delete.show.header:
+command.show.header:
   - "Список дайджестов, для удаления отправьте `/delete <id>`:"
-command.delete.ellipsis:
+command.show.ellipsis:
   - "…"
 command.delete.ok:
   - "Запись под номером `%d` удалена из базы данных!"
@@ -103,12 +103,12 @@ error.chart:
   - "Не могу получить изображение графика, ошибка: `%s`."
 error.rates:
   - "Ошибка получения данных котировок."
-error.delete.empty:
+error.show.empty:
   - "Ошибка: нет подходящих записей в базе данных."
 error.delete.format:
   - "Неправильный формат комманды, используйте:"
   - "`/delete <id>`."
-error.delete.error:
+error.delete.entry:
   - "Невозможно удалить запись `%d` из базы данных."
   - "Возможно запись уже была удалена."
 warn.response.long:
