--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -78,6 +78,12 @@ command.show.ellipsis:
   - "…"
 command.delete.ok:
   - "Запись под номером `%d` удалена из базы данных!"
+hashtag.digest.ok:
+  - "Записала."
+  - "Записано."
+  - "Записала, %username%."
+  - "Записано, %username%."
+  - "Сохранено."
 error.access:
   - "К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель."
 error.chatid:
