--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ Thumbs.db
 *.war
 *.ear
 
-# virtual machine crash logs (Reference: http://www.java.com/en/download/help/error_hotspot.xml)
+# virtual machine crash logs (Reference: https://www.java.com/en/download/help/error_hotspot.xml)
 hs_err_pid*
 
 # mpeltonen/sbt-idea plugin
