--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -159,3 +159,19 @@ crawler.motofan.writing:
   - "пишет"
 crawler.motofan.read:
   - "Прочитать сообщение в теме:\n➡️"
+event.bot.added:
+  - "Всем приветик! 😚"
+event.user.new:
+  - "Приветствую вас, %usernames%! 😚"
+  - "Приветик! :з"
+  - "Приветствую вас в этом уютном чатике! 😻"
+  - "Приветствуем %usernames%!"
+  - "Пламенный привет от нашего сообщества! 👏"
+event.user.left:
+  - "К сожалению, нас покинул %username%…"
+  - "%username% сошёл с этого корабля."
+  - "%username% вышел из этого чата."
+  - "Пользователь %username% оставил нас…"
+  - "Скатертью дорога, %username%! 😈"
+event.photo.change:
+  - "Эй…! А ну, верни всё как было! 😔"
