Implement saving some bot options for debug
Implement mute option

--- a/src/main/resources/digestbot/Phrases_en.yml
+++ b/src/main/resources/digestbot/Phrases_en.yml
@@ -90,6 +90,7 @@ command.debug.help:
   - "/debug BLogUpdates — Show Updates in system log."
   - "/debug BStackForDelay — Use stack for delay."
   - "/debug BGreetings — Disable greetings."
+  - "/debug BMute — Disable sending events to chat."
 command.debug.variable:
   - "Variable `%s` set to `%b`."
 command.debug.data:
